# cookiecutter-fastapi-async

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: bd8c9bb7bbe8_first_migration.py
{{cookiecutter.project_slug}}/app/: __init__.py  backend_pre_start.py  exception.py  exceptions.py  main.py
{{cookiecutter.project_slug}}/app/api/: api.py  deps.py
{{cookiecutter.project_slug}}/app/api/endpoints/: items.py
{{cookiecutter.project_slug}}/app/core/: config.py
{{cookiecutter.project_slug}}/app/crud/: __init__.py  base.py  item.py
{{cookiecutter.project_slug}}/app/db/: __init__.py  session.py
{{cookiecutter.project_slug}}/app/models/: item.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  item.py  typing.py
{{cookiecutter.project_slug}}/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/tests/api/: test_items.py
{{cookiecutter.project_slug}}/app/tests/crud/: test_items.py
{{cookiecutter.project_slug}}/app/tests/utils/: __init__.py  utils.py
{{cookiecutter.project_slug}}/app/utils/: __init__.py  utils.py
{{cookiecutter.project_slug}}/scripts/: test-local.sh  tests-start.sh
