[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.pylint.master]
extension-pkg-whitelist = """
pydantic
"""
ignore="""
tests
"""

[tool.pylint.messages_control]
disable = """
too-few-public-methods,missing-docstring, redefined-builtin, invalid-name
"""

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
alembic = "^1.6.5"
databases = {extras = ["postgresql"], version = "^0.4.3"}
SQLAlchemy = "1.3.20"
tenacity = "^8.0.1"
psycopg2-binary = "^2.9.1"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"
mypy = "^0.910"
pytest-asyncio = "^0.15.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
